<resources>
    <string name="app_name">News Reader</string>
    <string name="sample_article_title">Sample article title</string>
    <string name="sample_author_name">Sample author name</string>
    <string name="sample_snippet">Sample article snippet. This text should be long enough to wrap to next line.</string>
    <string name="sample_section_name">section</string>
    <string name="sample_date">date</string>
    <string name="no_articles">No articles found.Please check your search settings.</string>
    <string name="no_connection">No internet connection</string>
    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">Article Settings</string>
    <string name="settings_max_articles_label">Maximum # of Articles</string>
    <string name="settings_max_articles_key" translatable="false">max articles</string>
    <string name="settings_max_articles_default" translatable="false">0</string>
    <string name="settings_keyword_label">Search keyword</string>
    <string name="settings_keyword_key" translatable="false">keyword</string>
    <string name="settings_keyword_default" translatable="false"> </string>
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order-by</string>
    <string name="settings_order_by_default" translatable="false">newest</string>
    <string name="settings_order_by_newest_label">Newest</string>
    <string name="settings_order_by_newest_value" translatable="false">newest</string>
    <string name="settings_order_by_relevance_label">Relevance</string>
    <string name="settings_order_by_relevance_value" translatable="false">relevance</string>

</resources>
