<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="@dimen/cardview_default_elevation"
    app:cardCornerRadius="@dimen/cardview_default_radius"
    android:layout_margin="@dimen/spacing_around_card"
    android:id="@+id/item_layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_in_card"
        android:orientation="vertical">

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:padding="@dimen/margin_in_card"
        tools:text="@string/sample_article_title"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/author"
            android:padding="@dimen/margin_in_card"
            tools:text="@string/sample_author_name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/snippet"
            android:padding="@dimen/margin_in_card"
            tools:text="@string/sample_snippet"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/section"
            android:padding="@dimen/margin_in_card"
            tools:text="@string/sample_section_name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/date"
            android:padding="@dimen/margin_in_card"
            tools:text="@string/sample_date"/>

    </LinearLayout>


</android.support.v7.widget.CardView>
